<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/circle" />

            <ImageView
                android:id="@+id/circular_sector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circular_sector"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/circular_sector" />

            <ImageView
                android:id="@+id/circular_segment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circular_segment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/circle"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/circular_segment" />

            <ImageView
                android:id="@+id/ellipse_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ellipse_axis"
                app:layout_constraintTop_toBottomOf="@id/circular_sector"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/ellipse_axis" />

            <ImageView
                android:id="@+id/isosceles_triangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/isosceles_triangle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/circular_segment"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/isosceles_triangle" />

            <ImageView
                android:id="@+id/parallelogram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/parallelogram"
                app:layout_constraintTop_toBottomOf="@id/ellipse_axis"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/parallelogram" />

            <ImageView
                android:id="@+id/rectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rectangle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/isosceles_triangle"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/rectangle" />

            <ImageView
                android:id="@+id/regular_polygon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/regular_polygon"
                app:layout_constraintTop_toBottomOf="@id/parallelogram"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/regular_polygon" />

            <ImageView
                android:id="@+id/rhombus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rhombus"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rectangle"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/rhombus" />

            <ImageView
                android:id="@+id/right_triangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right_triangle"
                app:layout_constraintTop_toBottomOf="@id/regular_polygon"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/right_triangle" />

            <ImageView
                android:id="@+id/ring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ring"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rhombus"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/ring" />

            <ImageView
                android:id="@+id/square"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/square"
                app:layout_constraintTop_toBottomOf="@id/right_triangle"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/square" />

            <ImageView
                android:id="@+id/trapezoid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/trapezoid"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ring"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/trapezoid" />

            <ImageView
                android:id="@+id/triangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/triangle"
                app:layout_constraintTop_toBottomOf="@id/square"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/triangle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/square_list"
        android:id="@+id/square_list"/>

    <include layout="@layout/circle_list"
        android:id="@+id/circle_list"/>

    <include layout="@layout/circular_sector_list"
        android:id="@+id/circular_sector_list"/>

    <include layout="@layout/circular_segment_list"
        android:id="@+id/circular_segment_list"/>

    <include layout="@layout/ellipse_list"
        android:id="@+id/ellipse_list"/>

    <include layout="@layout/isosceles_triangle_list"
        android:id="@+id/isosceles_triangle_list"/>

    <include layout="@layout/parallelogram_list"
        android:id="@+id/parallelogram_list"/>

    <include layout="@layout/rectangle_list"
        android:id="@+id/rectangle_list"/>

    <include layout="@layout/regular_polygon_list"
        android:id="@+id/regular_polygon_list"/>

    <include layout="@layout/rhombus_list"
        android:id="@+id/rhombus_list"/>

    <include layout="@layout/right_triangle_list"
        android:id="@+id/right_triangle_list"/>

</androidx.constraintlayout.widget.ConstraintLayout>